--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ sp-core = { git = "https://github.com/paritytech/substrate", default-features = 
 [dev-dependencies]
 serde = { version = "1.0.132" }
 sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.16" }
+pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.16" }
 
 [features]
 default = ["std"]
