--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "pallet-dorg"
+name = "pallet-supersig"
 authors = ["Nathan GD <https://github.com/gdnathan>"]
-description = "pallet Decentralized ORGanisation to let users regroup as teams, and manage it themselves."
+description = "pallet supersig is an improved version of palelt multisig"
 version = "0.1.0"
 license = "Unlicense"
 homepage = "https://substrate.io"
