--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ std = [
     "sp-core/std",
     "sp-runtime/std",
 	"scale-info/std",
+    "pallet-balances/std",
 	"frame-support/std",
 	"frame-system/std",
 	"frame-benchmarking/std",
