added benchmark. removing submit_encoded_call

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ sp-io = { git = "https://github.com/paritytech/substrate", default-features = fa
 pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.16" }
 
 [features]
-default = ["std"] #, "runtime-benchmarks"]
+default = ["std", "runtime-benchmarks"]
 runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
 std = [
 	"codec/std",
