--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ scale-info = { version = "1.0.0", default-features = false, features = [
 	"derive",
 ] }
 
-frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "release-v0.9.23" }
+frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.23" }
 frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v0.9.23" }
 frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v0.9.23" }
 sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v0.9.23" }
