--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,11 +20,11 @@ scale-info = { version = "1.0.0", default-features = false, features = [
 ] }
 
 frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.23" }
-frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v0.9.23" }
-frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v0.9.23" }
-sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v0.9.23" }
-sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v0.9.23" }
-sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v0.9.23" }
+frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
+frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
+sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
+sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
 
 [dev-dependencies]
 serde = { version = "1.0.132" }
