fix: pin version of crate 'syn' to 1.0.96

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ frame-system = { git = "https://github.com/paritytech/substrate", default-featur
 sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
 sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
 sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
+syn = { version = "=1.0.96" }
 
 [dev-dependencies]
 serde = { version = "1.0.132" }
