--- a/rpc/runtime-api/Cargo.toml
+++ b/rpc/runtime-api/Cargo.toml
@@ -7,15 +7,15 @@ license = "Apache-2.0"
 
 
 [dependencies]
-codec = { package = "parity-scale-codec", version = "3.0.0", features = [
+codec = { package = "parity-scale-codec", version = "3.0", features = [
 	"derive",
 ], default-features = false }
 scale-info = { version = "2.1.1", default-features = false, features = [
 	"derive",
 ] }
 
-sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.24" }
-sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.24" }
+sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.24" , version = "4.0.0-dev"}
+sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.24" , version = "4.0.0-dev"}
 
 [features]
 default = ["std"]
