CI: don't fail on clippy warning

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Build
       run: cargo build --verbose
     - name: Clippy
-      run: cargo clippy --bins --tests --examples --all -- -D warnings
+      run: cargo clippy --bins --tests --examples --
     - name: Run tests
       run: cargo test
 
