hopefully fixes imp error

--- a/rpc/Cargo.toml
+++ b/rpc/Cargo.toml
@@ -20,5 +20,5 @@ sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate
 sp-std = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
 sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
 
-pallet-supersig-rpc-runtime-api = { path = "./runtime-api" }
-pallet-supersig = { path = ".." }
+pallet-supersig-rpc-runtime-api = { default-features = false, path = "./runtime-api" }
+pallet-supersig = { default-features = false, path = ".." }
