--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,9 @@ edition = "2021"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-serde = { version = "1.0.132", default-features = false, features = ["derive"] }
+serde = { version = "1.0.132", default-features = false, features = [
+	"derive",
+], optional = true }
 codec = { package = "parity-scale-codec", version = "3.0.0", features = [
 	"derive",
 ], default-features = false }
@@ -35,6 +37,7 @@ pallet-balances = { git = "https://github.com/paritytech/substrate", default-fea
 default = ["std", "runtime-benchmarks"]
 runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
 std = [
+	"serde",
 	"codec/std",
 	"sp-std/std",
 	"sp-core/std",
