--- a/rpc/Cargo.toml
+++ b/rpc/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pallet-supersig-rpc"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Timothée Delabrouille <https://github.com/tdelabro>"]
 edition = "2021"
 license = "Apache-2.0"
@@ -17,7 +17,7 @@ scale-info = { version = "2.3.1", default-features = false, features = [
 jsonrpsee = { version = "0.16.2", features = ["server", "macros"] }
 
 sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
-sp-std = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
+sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
 sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
 
 pallet-supersig = { path = ".." }
