--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,4 +50,10 @@ std = [
 	"frame-system/std",
 	"frame-benchmarking?/std",
 ]
+
+runtime-benchmarks = [
+	"frame-benchmarking/runtime-benchmarks",
+	"frame-support/runtime-benchmarks",
+	"frame-system/runtime-benchmarks",
+]
 try-runtime = ["frame-support/try-runtime"]
