--- a/rpc/Cargo.toml
+++ b/rpc/Cargo.toml
@@ -16,9 +16,9 @@ scale-info = { version = "2.3.1", default-features = false, features = [
 
 jsonrpsee = { version = "0.16.2", features = ["client-core", "server", "macros"] }
 
-sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
-sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
-sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
+sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
+sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
+sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
 
 pallet-supersig = { path = ".." }
 pallet-supersig-rpc-runtime-api = { path = "./runtime-api" }
